--- a/src/App.css
+++ b/src/App.css
@@ -30,10 +30,34 @@
       }
     }
 
+    @media screen and (max-width: 1024px) {
+      .signinup-logo-container {
+        display: none;
+      }
+    }
+
+    /* @media screen and (min-width: 769px) and (max-width: 1024px) {
+      .signinup-logo-container {
+
+        gap: 40px;
+
+        .signinup_logo {
+          width: 120px;
+          aspect-ratio: 1/1;
+        }
+
+        h2 {
+          color: white;
+          font-size: 2.5rem;
+          font-weight: 500;
+        }
+      }
+    } */
+
     .form-container {
       background: white;
       border-radius: 10px;
-      padding: 10px 30px;
+      padding: 20px 30px;
       width: 380px;
 
       .signinup-form {
@@ -101,6 +125,22 @@
           font-weight: 500;
         }
       }
+    }
+  }
+
+  @media screen and (max-width: 1024px) {
+    .signinup-container {
+      width: 90% !important;
+
+      justify-content: center;
+    }
+  }
+
+  @media screen and (min-width: 1025px) and (max-width: 1200px) {
+    .signinup-container {
+      width: 80% !important;
+
+      justify-content: space-around;
     }
   }
 }
