--- a/src/pages/chat/chat.css
+++ b/src/pages/chat/chat.css
@@ -11,6 +11,13 @@
 .chat-wrapper {
   width: 70%;
   display: flex;
-  align-items: center;
+  align-items: stretch;
   justify-content: space-between;
+  max-height: 80vh;
+  min-height: 70vh;
 }
+
+/* .chat-wrapper > div {
+  flex: 1;
+  background: #00000053;
+} */
