--- a/src/components/chatMsg/chatMsg.css
+++ b/src/components/chatMsg/chatMsg.css
@@ -1,4 +1,143 @@
-.chat-msg {
+.chatMsg {
   border: 1px solid red;
   flex: 2;
+  background: #f1f5ff;
+  position: relative;
+  width: 100%;
+
+  .msgTop {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px;
+
+    .userInfo {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+
+      h3 {
+        font-size: 1.07rem;
+        font-weight: 500;
+
+        .dot {
+          width: 18px;
+        }
+      }
+
+      img {
+        width: 40px;
+        aspect-ratio: 1/1;
+        border-radius: 50%;
+      }
+    }
+
+    .help_img {
+      width: 25px;
+    }
+  }
+
+  hr {
+    border: none;
+    background: #d1d1d1;
+    height: 1px;
+  }
+
+  .msg-box {
+    height: calc(100% - 100px);
+    padding-bottom: 80px;
+    padding-top: 10px;
+    overflow-y: scroll;
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 20px;
+
+    .s-msg,
+    .r-msg {
+      display: flex;
+      align-items: end;
+      justify-content: end;
+      gap: 5px;
+      padding: 0 15px;
+      /* background: #19138886; */
+      position: relative;
+
+      .msg {
+        background: #0f74da;
+        padding: 10px;
+        color: #fff;
+        padding: 8px;
+        border-radius: 8px 8px 0 8px;
+        max-width: 200px;
+        font-size: 13px;
+        font-weight: 300;
+        margin-right: 50px;
+      }
+
+      div {
+        position: absolute;
+        bottom: -30px;
+
+        img {
+          width: 27px;
+          aspect-ratio: 1/1;
+          border-radius: 50%;
+        }
+
+        p {
+          font-size: 11px;
+          color: #555;
+        }
+      }
+    }
+
+    .r-msg {
+      flex-direction: row-reverse;
+      justify-content: start;
+      align-items: end;
+
+      .msg {
+        border-radius: 8px 8px 8px 0px;
+        margin-left: 50px;
+      }
+    }
+
+    /* .s-msg div img,
+    .r-msg div img {
+      width: 40px;
+      aspect-ratio: 1/1;
+      border-radius: 50%;
+    } */
+  }
+
+  .chat-input {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    position: absolute;
+    bottom: 0;
+    gap: 15px;
+    background: white;
+    padding: 10px;
+
+    input {
+      flex: 1;
+      background: transparent;
+      border: none;
+      outline: none;
+      padding: 10px;
+    }
+
+    label {
+      display: flex;
+      img {
+        width: 24px;
+      }
+    }
+
+    img {
+      width: 26px;
+      cursor: pointer;
+    }
+  }
 }
