--- a/src/components/chatMsg/chatMsg.css
+++ b/src/components/chatMsg/chatMsg.css
@@ -141,3 +141,24 @@
     }
   }
 }
+
+.chat-welcome {
+  background: white;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 10px;
+
+  img {
+    width: 60px;
+    opacity: 0.8;
+  }
+
+  p {
+    font-size: 20px;
+    font-weight: 500;
+    color: #666666;
+  }
+}
